--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </title>
         <body>
           <h1>Peruncingan Peperiksaan Akhir Tahun 2022/2023</h1>
-          <div class="box"><ol><li><a href="#fizik">Fizik</a></li><a href="#kimia">Kimia</a></ol></div>
+          <div class="box"><ol><li><a href="#fizik">Fizik</a></li><li><a href="#kimia">Kimia</a></li></ol></div>
             <h2 id="fizik">
                 Fizik Kertas 2
             </h2>
