--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
       <li><a href="peruncingan.html">Peruncingan Peperiksaan Akhir Tahun JPNT 2022/2023</a></li>
     </ol>
   </div>
+  <h3>Rumia Dancing</h3>
+  <img src="https://media.tenor.com/images/ff1fad95be58be15147f9991866224ac/tenor.gif" class="exc">
 </body></head>
 </html>
