--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </ol>
   </div>
   <h3>Rumia Dancing</h3>
-  <img src="https://media.tenor.com/images/ff1fad95be58be15147f9991866224ac/tenor.gif" class="exc">
+  <img src="https://media.tenor.com/images/ff1fad95be58be15147f9991866224ac/tenor.gif" style="filter: invert(0%)">
+  <footer><p style="color: #999;">Made with ❤️ by <a href="https://mstdn.social/@danifold" style="color: #99b">NotMyJunie</a></p></footer>
 </body></head>
 </html>
