--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <li><a href="peruncingan.html">Peruncingan Peperiksaan Akhir Tahun JPNT 2022/2023</a></li>
     </ol>
   </div>
+  <h3>About Me</h3>
+  <ul><li>Founded late 2020</li>
+  <li>any pronouns</li></ul>
   <h3>Rumia Dancing</h3>
   <img src="https://media.tenor.com/images/ff1fad95be58be15147f9991866224ac/tenor.gif" style="filter: invert(0%)">
   <footer><p style="color: #999;">Made with ❤️ by <a href="https://mstdn.social/@danifold" style="color: #99b">NotMyJunie</a></p><a href="https://github.com/notmyjunie/notmyjunie.github.io" style="color: #99b;">Source code</a><p style="color:#999;font-family:monospace;">Entire repo is less than 50kb!!!</p></footer>
