--- a/peruncingan.html
+++ b/peruncingan.html
@@ -39,10 +39,10 @@
             <ol>
                 <li>Struktur Atom<ul><li>Subatom<div class="box"><h4>Atom</h4><ol><li>Terdiri daripada 3 zarah iaitu proton, neutron dan elektron</li><li>Neutron dan proton terikat bersama dalam <b>nukleus</b></li><li>n(e)=n(p)</li></ol></div></li><li>Isotop<div class="box"><h4>Isotop</h4><ol><li>Merupakan <b>atom-atom unsur sama </b>yang mempunyai <b>bilangan proton yang sama </b>tetapi <b>bilangan neutron yang berlainan.</b></li>
                 <li>Mempunyai sifat kimia yang sama kerana masing2 <b>mempunyai bilangan dan susunan elektron yang sama.</b></li></ol><p>Sifat fizik isotop seperti ketumpatan dan takat didih adalah berbeza</p></div></li></ul></li>
+                <li>Ikatan Kimia<ul><li>Ikatan Kovalen</li><li>Ikatan Ion</li><li>Ikatan Datif</li><li>Ikatan Hidrogen</li></ul></li>
                 <li>Bahan Buatan dalam Industri</li>
-                <li>Persamaan Kimia<ul><li>T/B Asis + Garam Karbonat</li><li>T/B Asid + Logam</li></ul></li>
-                <li>Pembentukan Ikatan Kimia<ul><li>Ikatan Kovalen</li><li>Ikatan Ion</li><li>Ikatan Datif</li><li>Ikatan Hidrogen</li></ul></li>
-                <li>Asid<ul><li>T/B Peneutralan</li><li>Pengiraan</li></ul></li>
+                <li>Formula dan Persamaan Kimia</li>
+                <li>Asid dan Bes<ul><li>T/B Asid<div class="box"><h4>Sifat Kimia Asid</h4><ol><li>Sifat fizik<ul><li>Rasa masam, mengakis, menukarkan warna kertas litmus biru kepada warna merah.</li><li>Mempunyai nilai pH <7.</li></ul></li><li>Sifat Kimia<ol><li><ul><li>Bertindak balas dengan bes untuk menghasilkan <b>garam dan air</b>.</li><li>Meneutralkan <b>larutan beralkali </b>untuk membentuk <b>garam dan air</b>.</li></ul></li><li>Bertindak balas dengan logam reaktif seperti <b>magnesium, Mg, aluminum/aluminium, Al dan zink, Zn</b> untuk menghasilkan <b>garam dan gas hidrogen, H2.</b></li><li>Bertindak balas dengan <b>karbonat logam</b> untuk menghasilkan <b>garam, air dan gas karbon dioksida.</b></li></ol></li></ol></div></li></ul></li>
                 <li>Kadar T/B<ul><li>Faktor Yg Mempengaruhi</li><li>Saiz / Kepekatan</li><li>Terangkan Teori Perlanggaran</li></ul></li>
                 <li>Jadual Berkala Unsur</li>
                 <li>Garam<ul><li>Bagi carta alir</li></ul></li>
