--- a/peruncingan.html
+++ b/peruncingan.html
@@ -37,15 +37,63 @@
             </h2>
             <h3>Bahagian A</h3>
             <ol>
-                <li>Struktur Atom<ul><li>Subatom<div class="box"><h4>Atom</h4><ol><li>Terdiri daripada 3 zarah iaitu proton, neutron dan elektron</li><li>Neutron dan proton terikat bersama dalam <b>nukleus</b></li><li>n(e)=n(p)</li></ol></div></li><li>Isotop<div class="box"><h4>Isotop</h4><ol><li>Merupakan <b>atom-atom unsur sama </b>yang mempunyai <b>bilangan proton yang sama </b>tetapi <b>bilangan neutron yang berlainan.</b></li>
-                <li>Mempunyai sifat kimia yang sama kerana masing2 <b>mempunyai bilangan dan susunan elektron yang sama.</b></li></ol><p>Sifat fizik isotop seperti ketumpatan dan takat didih adalah berbeza</p></div></li></ul></li>
+                <li>Struktur Atom<ul><li>Subatom<div class="box"><h4>Atom</h4><ol><li>Terdiri daripada 3 zarah iaitu proton, neutron dan elektron.</li><li>Neutron dan proton terikat bersama dalam <b>nukleus</b>.</li><li>n(e)=n(p)</li></ol></div></li><li>Isotop<div class="box"><h4>Isotop</h4><ol><li>Merupakan <b>atom-atom unsur sama </b>yang mempunyai <b>bilangan proton yang sama </b>tetapi <b>bilangan neutron yang berlainan.</b></li>
+                <li>Mempunyai sifat kimia yang sama kerana masing2 <b>mempunyai bilangan dan susunan elektron yang sama.</b></li></ol><p>Sifat fizik isotop seperti ketumpatan dan takat didih adalah berbeza.</p></div></li></ul></li>
                 <li>Ikatan Kimia<ul><li>Ikatan Kovalen</li><li>Ikatan Ion</li><li>Ikatan Datif</li><li>Ikatan Hidrogen</li></ul></li>
                 <li>Bahan Buatan dalam Industri</li>
                 <li>Formula dan Persamaan Kimia</li>
                 <li>Asid dan Bes<ul><li>T/B Asid<div class="box"><h4>Sifat Kimia Asid</h4><ol><li>Sifat fizik<ul><li>Rasa masam, mengakis, menukarkan warna kertas litmus biru kepada warna merah.</li><li>Mempunyai nilai pH <7.</li></ul></li><li>Sifat Kimia<ol><li><ul><li>Bertindak balas dengan bes untuk menghasilkan <b>garam dan air</b>.</li><li>Meneutralkan <b>larutan beralkali </b>untuk membentuk <b>garam dan air</b>.</li></ul></li><li>Bertindak balas dengan logam reaktif seperti <b>magnesium, Mg, aluminum/aluminium, Al dan zink, Zn</b> untuk menghasilkan <b>garam dan gas hidrogen, H2.</b></li><li>Bertindak balas dengan <b>karbonat logam</b> untuk menghasilkan <b>garam, air dan gas karbon dioksida.</b></li></ol></li></ol></div></li></ul></li>
-                <li>Kadar T/B<ul><li>Faktor Yg Mempengaruhi</li><li>Saiz / Kepekatan</li><li>Terangkan Teori Perlanggaran</li></ul></li>
+                <li>Kadar T/B<ul><li>Faktor yang Mempengaruhi Kadar T/B<div class="box"><h4>Terdapat 5 faktor iaitu</h4><ol><li>Saiz T/B</li><li>Kepekatan</li><li>Suhu</li><li>Kehadiran <a href="#mangkin">mangkin</a></li><li>Tekanan</li></ol></div></li><li>Terangkan Teori Perlanggaran<div class="box"><h4>Teori Perlanggaran</h4><ol><li>Menerangkan bagaimana zarah2 bahan T/B berinteraksi antara satu sama lain menyebabkan T/B berlaku dan membentuk hasil T/B.</li><li><b>Teori Perlanggaran</b> dan <b>Teori Kinetik Jirim</b> berhubung kait dari aspek <b>pemindahan tenaga</b>.</li><li>Teori Perlanggaran menyatakan bahawa suatu T/B kimia boleh berlaku kesan daripada perlanggaran antara zarah2.</li><li>Perlanggaran antara zarah T/B menghasilkan T/B kimia yang disebut <b>perlanggaran berkesan</b>.</li><li>Semua jirim terdiri daripada zarah seperti atom, ion atau molekul yang <b>bergerak</b> berterusan <b>secara rawak</b> dan <b>berlanggar</b> antara satu sama lain.</li></ol></div></li><li id="mangkin">Mangkin<div class="box"><h4>Kehadiran Mangkin</h4><p>Mangkin ialah bahan kimia yang mengubah kadar T/B tanpa mengalami sebarang perubahan kimia pada akhir T/B.</p><h4>Ciri2 Mangkin</h4><ol><li>Tidak mengubah kuantiti hasil T/B dalam T/B kimia.</li><li>Tindakan mangkin adalah khusus. Mangkin hanya bertindak dalam T/B kimia yang khusus.</li><li>Hanya jumlah mangkin yang sedikit diperlukan untuk mengubah kadar T/B</li><li>Mangkin boleh meningkatkan kadar T/B</li><li>Pada akhir T/B, mangkin kekal tidak berubah secara kimia atau kuantitatif, tetapi boleh berubah secara fizik.</li></ol></div></li></ul></li>
                 <li>Jadual Berkala Unsur</li>
-                <li>Garam<ul><li>Bagi carta alir</li></ul></li>
+                <li>Garam<ul><li>Garam<div class="box"><h4>Maksud Garam</h4><p>Garam ialah <b>sebatian ion</b> yang terbentuk apabila ion hidrogen, H+ daripada asid digantikan dengan ion logam atau ion ammonium, NH4+.<br> Garam terdiri daripada kation(ion positif) daripada bes atau alkali yang bergabung dengan anion (ion negatif) daripada asid.</p><h4>Ciri2 Fizikal Hablur Garam</h4><ol><li>Hablur bagi sebatian yang berlainan mempunyai <b>bentuk geometri</b> yang berbeza.</li><li>Bentuk sebatian adalah sama walaupun saiz berbeza.</li><li>Susunan zarah yang berbeza dalam hablur menghasilkan bentuk geometri yang berbeza.</li></ol></div></li><li>Keterlarutan Garam dalam Air<div class="box"><table>
+                  <tr>
+                    <td>Garam</td>
+                    <td>Keterlarutan dalam air</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Garam nitrat(NO3-)
+                    </td>
+                    <td>
+                      Semua garam larut.
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Garam ammonium, natrium dan kalium.
+                    </td>
+                    <td>
+                      Semua garam larut.
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Garam klorida(Cl-)
+                    </td>
+                    <td>
+                      Semua garam klorida larut kecuali: <ul><li>
+                        AgCl
+                      </li><li>HgCl2</li>
+                      <li>PbCl2(larut dalam air panas)</li></ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Garam sulfat(SO4^2-)
+                    </td>
+                    <td>
+                      Semua garam sulfat larut kecuali: <ul><li>PbSO4</li><li>CaSO4</li><li>BaSO4</li></ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Garam karbonat(CO3^2-)
+                    </td>
+                    <td>
+                      Semua garam karbonat <b>tidak larut</b> dalam air <b>kecuali:</b><ul><li>K2CO3</li><li>Na2CO3</li><li>(NH4)2CO3</li></ul>
+                    </td>
+                  </tr>
+                </table></div></li></ul></li>
             </ol>
             <h3>Bahagian B</h3>
             <ol>
