--- a/peruncingan.html
+++ b/peruncingan.html
@@ -11,7 +11,7 @@
         </title>
         <body>
           <h1>Peruncingan Peperiksaan Akhir Tahun 2022/2023</h1>
-          <div class="box" style="width:45%;"><h4>Navigation</h4><ol><li><a href="#fizik">Fizik</a></li><li><a href="#kimia">Kimia</a></li></ol><a href="index.html">NMJ Site Hub</a></div>
+          <div class="box" style="width:45%;"><h4>Navigation</h4><ol><li><a href="#fizik">Fizik</a></li><li><a href="#kimia">Kimia</a></li><li><a href="#adma">Add Math</a></li></ol><a href="index.html">NMJ Site Hub</a></div>
             <h2 id="fizik">
                 Fizik Kertas 2
             </h2>
@@ -105,6 +105,8 @@
             <p>**Soalan 6,7,8 aras tinggi</p>
             <p>***Bahagian B Ikatan Kimia ngan Asid dan bes pilih drpd dua tu</p>
             <p>****Soalan last wajib jawab</p>
+            <h2 id="adma">Add Math</h2>
+            <p>Masuk lake butoh.</p>
             <footer><a href="https://mstdn.social/@DaniFold"><div class="tw"><h4>Mastodon</h4> <p>Follow bro</p>
                 </div></a>
                 <a href="http://www.wtfpl.net/"><div class="tw">
