--- a/peruncingan.html
+++ b/peruncingan.html
@@ -35,7 +35,7 @@
             <h2 id="kimia">
                 Kimia Kertas 2
             </h2>
-            <a href="#nav">Return to navigation menu.</a>
+            <a href="#nav">Return to navigation menu</a>
             <h3>Bahagian A</h3>
             <ol>
                 <li>Struktur Atom<ul><li>Subatom<div class="box"><h4>Atom</h4><ol><li>Terdiri daripada 3 zarah iaitu proton, neutron dan elektron.</li><li>Neutron dan proton terikat bersama dalam <b>nukleus</b>.</li><li>n(e)=n(p)</li></ol></div></li><li>Isotop<div class="box"><h4>Isotop</h4><ol><li>Merupakan <b>atom-atom unsur sama </b>yang mempunyai <b>bilangan proton yang sama </b>tetapi <b>bilangan neutron yang berlainan.</b></li>
@@ -107,7 +107,7 @@
             <p>***Bahagian B Ikatan Kimia ngan Asid dan bes pilih drpd dua tu</p>
             <p>****Soalan last wajib jawab</p>
             <h2 id="adma">Add Math</h2>
-<a href="#nav">Return to navigation menu.</a>
+<a href="#nav">Return to navigation menu</a>
             <p>Masuk lake butoh.</p>
             <footer><a href="https://mstdn.social/@DaniFold"><div class="tw"><h4>Mastodon</h4> <p>Follow bro</p>
                 </div></a>
