--- a/peruncingan.html
+++ b/peruncingan.html
@@ -11,7 +11,7 @@
         </title>
         <body>
           <h1>Peruncingan Peperiksaan Akhir Tahun 2022/2023</h1>
-          <div class="box" style="width:45%;"id="nav"><h4>Navigation</h4><ol><li><a href="#fizik">Fizik</a></li><li><a href="#kimia">Kimia</a></li><li><a href="#adma">Add Math</a></li></ol><a href="index.html">NMJ Site Hub</a></div>
+          <div class="box" style="width:45%;"id="nav"><h4>Navigation</h4><ol><li><a href="#fizik">Fizik</a></li><li><a href="#kimia">Kimia</a></li><li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Add Math</a></li></ol><a href="index.html">NMJ Site Hub</a></div>
             <h2 id="fizik">
                 Fizik Kertas 2
             </h2>
