--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" type="text/css" href="styles.css">
+        
+        <link rel="icon" type="image/png" href="/content/20230119_214252.png"
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
