--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" type="text/css" href="styles.css">
         
-        <link rel="icon" type="image/png" href="/content/20230119_214252.png"
+        <link rel="icon" type="image/png" href="/content/20230119_214252.png">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
