--- a/peruncingan.html
+++ b/peruncingan.html
@@ -107,8 +107,7 @@
             <h2 id="adma">Add Math</h2>
 <a href="#nav">Return to navigation menu</a>
             <p>Masuk lake butoh.</p>
-            <footer><a href="https://mstdn.social/@DaniFold"><div class="tw"><h4>Mastodon</h4> <p>Follow bro</p>
-                </div></a>
+            <footer>
                 <a href="http://www.wtfpl.net/"><div class="tw">
                     <h4>License
                     </h4>
