--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
 <title>NMJ Site Hub</title><body>
   <h1>NotMyJunie</h1>
   <div class="box">
-    <h4>Useful Links</h4>
-    <ol>
-      <li><a href="peruncingan.html">Peruncingan Peperiksaan Akhir Tahun JPNT 2022/2023</a></li>
-    </ol>
+    <h4>🚧 Site Work in Progress 🚧</h4>
   </div>
-  <h3>About Me</h3>
-  <ul><li>Founded late 2020</li>
+  <h3>About:</h3>
+  <ul>September 4 2006<li></li>
   <li>any pronouns</li></ul>
   <h3>Rumia Dancing</h3>
   <img src="https://media.tenor.com/images/ff1fad95be58be15147f9991866224ac/tenor.gif" style="filter: invert(0%)">
-  <footer><p style="color: #999;">Made with ❤️ by <a href="https://mstdn.social/@danifold" style="color: #99b">NotMyJunie</a></p><a href="https://github.com/notmyjunie/notmyjunie.github.io" style="color: #99b;">Source code</a><p style="color:#999;font-family:monospace;">Entire repo is less than 50kb!!!</p></footer>
+  <footer><p style="color: #999;">Made with ❤️ by NMJ</p><a href="https://github.com/notmyjunie/notmyjunie.github.io" style="color: #99b;">Source code</a><p style="color:#999;font-family:monospace;">Entire repo is less than 50kb!!!</p></footer>
 </body></head>
 </html>
