--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h4>🚧 Site Work in Progress 🚧</h4>
   </div>
   <h3>About:</h3>
-  <ul>September 4 2006<li></li>
-  <li>any pronouns</li></ul>
+  <ul><li>September 4 2006</li>
+  <li>Any pronouns</li></ul>
   <h3>Rumia Dancing</h3>
   <img src="https://media.tenor.com/images/ff1fad95be58be15147f9991866224ac/tenor.gif" style="filter: invert(0%)">
   <footer><p style="color: #999;">Made with ❤️ by NMJ</p><a href="https://github.com/notmyjunie/notmyjunie.github.io" style="color: #99b;">Source code</a><p style="color:#999;font-family:monospace;">Entire repo is less than 50kb!!!</p></footer>
