--- a/index.html
+++ b/index.html
@@ -5,18 +5,36 @@
 
         <link rel="stylesheet" type="text/css" href="styles.css">
         
-        <link rel="icon" type="image/png" href="/content/20230119_214252.png">
+        <link rel="icon" type="image/png" href="/content/junielogo.png">
 
-<title>NMJ Site Hub</title><body>
-  <h1>NotMyJunie</h1>
-  <div class="box">
-    <h4>🚧 Site Work in Progress 🚧</h4>
+<title>one of the sites of all time</title><body>
+  
+  <div class="main"><div></div><img src="/content/junielogo.png" width="220" height="100" class="logo"><h1>NotMyJunie</h1>
+  <p><b>any</b> pronouns
+  <br>UTC+8 timezone<p>
+    <div><ul>
+    	<li>Summoned upon on September 4, 2006</li>
+    	<li>Finfnxjfjfkkfkflrofkfkdofokfidifjf</li>
+    	</ul></div>
   </div>
-  <h3>About:</h3>
-  <ul><li>September 4 2006</li>
-  <li>Any pronouns</li></ul>
-  <h3>Rumia Dancing</h3>
-  <img src="https://media.tenor.com/images/ff1fad95be58be15147f9991866224ac/tenor.gif" style="filter: invert(0%)">
-  <footer><p style="color: #999;">Made with ❤️ by NMJ</p><a href="https://github.com/notmyjunie/notmyjunie.github.io" style="color: #99b;">Source code</a><p style="color:#999;font-family:monospace;">Entire repo is less than 50kb!!!</p></footer>
+  <div class="main">
+  	<h1>places where i hang out or some shit</h1>
+  	<div class="social-list">
+  		<a href="https://toot.community/@nmj" aria-hidden="true">
+  			<div class="socmed" id="mstdn"><img src="/content/mstdnlogo.png"width="30"height="30" alt="Mastodon">
+  				<p>Mastodon</p></div></a>
+  			<a href="https://matrix.to/#/@notmyjunie:catgirl.cloud" aria-hidden="true">
+  				<div class="socmed">
+  					<img src="/content/matrixlogo.png" width="70" height="30" style="filter: invert(100%);">
+  					<p>Matrix<br>@notmyjunie:catgirl.cloud</p></div></a>
+  	<a href="https://www.instagram.com/notmyjunie/">
+  		<div class="socmed" id="ig" aria-hidden="true">
+  			<img src="/content/iglogo.png" width="30"height="30" alt="Instagram" style="filter: invert(100%);">
+  			<p>Instagram</p></div></a>
+  	</div></div></div>
+  	<div class="main">
+  		<h1>some cool shit you can check out</h1>
+  		<h3>¯⁠\⁠_⁠(⁠ツ⁠)⁠_⁠/⁠¯</h3>
+  		<p>for now at least</p></div>
 </body></head>
 </html>
