--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" type="text/css" href="styles.css">
         
-        <link rel="icon" type="image/png" href="/content/junielogo.png">
+        <link rel="icon" type="image/png" href="/content/webicon.png">
 
 <title>one of the sites of all time</title><body>
   
