--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
   		<div class="socmed" id="ig" aria-hidden="true">
   			<img src="/content/iglogo.png" width="30"height="30" alt="Instagram" style="filter: invert(100%);">
   			<p>Instagram</p></div></a>
+  			<a href="https://open.spotify.com/user/9968zzidal54ytoldov37le01?si=GlIsutKDSkaaR4oha6Dryg&utm_source=copy-link">
+  				<div class="socmed" id="sptfy" aria-hidden="true">
+  					<img src="/content/spotifylogo.png" width="30"height="30" alt="Spotify"><p>Spotify</p></div>
+  			</a>
   	</div></div></div>
   	<div class="main">
   		<h1>some cool shit you can check out</h1>
