--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   			<a href="https://matrix.to/#/@notmyjunie:catgirl.cloud" aria-hidden="true">
   				<div class="socmed">
   					<img src="/content/matrixlogo.png" width="70" height="30" style="filter: invert(100%);">
-  					<p>Matrix<p style="font-size:0.7em">@notmyjunie:catgirl.cloud</p></p></div></a>
+  					<p>Matrix<p style="
+  					font-size:0.7em;
+  					margin-top: -16px;">@notmyjunie:catgirl.cloud</p></p></div></a>
   	<a href="https://www.instagram.com/notmyjunie/">
   		<div class="socmed" id="ig" aria-hidden="true">
   			<img src="/content/iglogo.png" width="30"height="30" alt="Instagram" style="filter: invert(100%);">
