--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <title>one of the sites of all time</title><body>
   
-  <div class="main" style="margin-top:0;"><div></div><img src="/content/junielogo.png" width="220" height="100" class="logo"><h1>NotMyJunie</h1>
+  <div class="nav"><a href="index.html"><p>Home</p></a><a href="about.html"><p>About</p></a></div>
+  <div class="main"><div></div><img src="/content/junielogo.png" width="220" height="100" class="logo"><h1>NotMyJunie</h1>
   <p><b>any</b> pronouns
   <br>UTC+8 timezone<p>
     <div><ul>
