--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/png" href="/content/webicon.png">
 <title>one of the sites of all time</title>
 <body>
-	<div class="nav"><a href="index.html"><p>Home</p></a><a href="about.html"><p>About</p></a></div>
+	<div class="nav"><a href="index.html" class="slay"><p>Home</p></a><a href="about.html"><p class="slay">About</p></a></div>
 	<div class="main" id="apt">
 		<h1>About Me</h1>
 		<h3>Slacker / Developer / Wanderer</h3>
