--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 				My name is [REDACTED] but you can call me Junie, Juno, whatever you prefer, as long as its something good.
 			</p>
 			<p>
-				I'm pro-secularist, anarchist and a socialist.
+				I'm pro-secularist, an anarchist and a socialist.
 				schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp 
 			</p>
 		</div>
