--- a/about.html
+++ b/about.html
@@ -21,6 +21,9 @@
 				I'm pro-secularist, an anarchist and a socialist.
 				schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp schlorp 
 			</p>
+			<p>
+				<a href="index.html#contact" class="click">Contact</a>
+			</p>
 		</div>
 	</div>
 </body>
