--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     	<li>Finfnxjfjfkkfkflrofkfkdofokfidifjf</li>
     	</ul></div>
   </div>
-  <div class="main">
+  <div class="main" id="contact">
   	<h1>places where i hang out or some shit</h1>
   	<div class="social-list">
   		<a href="https://toot.community/@nmj" aria-hidden="true">
