--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 				My real name is [REDACTED] but you can call me Junie, Juno, whatever you prefer, as long as its something good.
 			</p>
 			<p>
-				I am a person, yes, that's right. I am a person, one of 8 billion on the planet. <b>A</b> person; you won't find that anywhere else. The most person a person can ever be. One of a person, one half, one quarter, one, just <b>one</b> person.
+				I am a person, yes, that's right. I am a person, one of 8 billion on the planet. <b><u>A</u></b> person; you won't find that anywhere else. The most person a person can ever be. One of a person, one half, one quarter, one, just <b><u>one</u></b> person.
 			</p>
 			<p>
 				<a href="index.html#contact" class="click">Contact</a>
