--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   				<div class="socmed" id="sptfy" aria-hidden="true">
   					<img src="/content/Spotify_Logo_CMYK_Black.png" width="100"height="30" alt="Spotify"><p>Spotify</p></div>
   			</a>
-  	</div></div><p>e-mail: nmj@tuta.io</p></div>
+  	</div><p>e-mail: nmj@tuta.io</p></div></div>
   	<div class="main">
   		<h1>some cool shit you can check out</h1>
   		<h3>¯⁠\⁠_⁠(⁠ツ⁠)⁠_⁠/⁠¯</h3>
