--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="nav"><a href="index.html" class="slay"><p>Overview</p></a><a href="about.html" class="slay"><p>About</p></a></div>
   <div class="main"><div></div><img src="/content/junielogo.png" width="220" height="100" class="logo"><h1>NotMyJunie</h1>
   <p><b>any</b> pronouns
-  <br>UTC+8 timezone<p>
+  <br>UTC+8 timezone<br>this website v3 will be coming since i am unhappy with the state of the files<p>
     <div><ul>
     	<li>Summoned upon on September 4, 2006</li>
     	<li>Finfnxjfjfkkfkflrofkfkdofokfidifjf</li>
