--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             	<img src="/assets/fedi.png" alt="Fedi" class="socialicon">
             	<p class="imglink">toot.community</p>
             </a>
+            <a href="https://kitty.social/@nmj"><img src="/assets/firefish.webp" alt="Firefish" class="socialicon">
+            <p class="imglink">kitty.social</p>
+            </a>
         </div>
     </footer>
     <!--/div-->
