--- a/assets/html/socials.html
+++ b/assets/html/socials.html
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../../style.css" >
+</head>
 <div id="socials">
             <a href="https://instagram.com/notmyjunie?igshid=YmMyMTA2M2Y=">
             	<img src="/assets/instagram.png" alt="Instagram" class="socialicon">
