--- a/assets/html/socials.html
+++ b/assets/html/socials.html
@@ -1,20 +1,23 @@
 <head>
-	<link rel="stylesheet" type="text/css" href="../../style.css" >
+  <link rel="stylesheet" type="text/css" href="../../style.css" />
 </head>
-<div id="socials">
-            <a href="https://instagram.com/notmyjunie?igshid=YmMyMTA2M2Y=">
-            	<img src="/assets/instagram.png" alt="Instagram" class="socialicon">
-            </a>
-            <a href="https://matrix.to/#/@notmyjunie:catgirl.cloud"><img src="/assets/matrix.png" class="socialicon" alt="Matrix">
+<body>
+  <div id="socials">
+    <a href="https://instagram.com/notmyjunie?igshid=YmMyMTA2M2Y=">
+      <img src="/assets/instagram.png" alt="Instagram" class="socialicon" />
+    </a>
+    <a href="https://matrix.to/#/@notmyjunie:catgirl.cloud"
+      ><img src="/assets/matrix.png" class="socialicon" alt="Matrix" />
 
-            <p class="imglink">@notmyjunie:catgirl.cloud</p>
-
-            </a>
-            <a href="https://toot.community/@nmj">
-            	<img src="/assets/fedi.png" alt="Fedi" class="socialicon">
-            	<p class="imglink">toot.community</p>
-            </a>
-            <a href="https://kitty.social/@nmj"><img src="/assets/firefish.webp" alt="Firefish" class="socialicon">
-            <p class="imglink">kitty.social</p>
-            </a>
- </div>
+      <p class="imglink">@notmyjunie:catgirl.cloud</p>
+    </a>
+    <a href="https://toot.community/@nmj">
+      <img src="/assets/fedi.png" alt="Fedi" class="socialicon" />
+      <p class="imglink">toot.community</p>
+    </a>
+    <a href="https://kitty.social/@nmj"
+      ><img src="/assets/firefish.webp" alt="Firefish" class="socialicon" />
+      <p class="imglink">kitty.social</p>
+    </a>
+  </div>
+</body>
