--- a/assets/html/navbar.html
+++ b/assets/html/navbar.html
@@ -1,1 +1,4 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="../../style.css" />
+</head>
 <a href="index.html">Overview</a><a href="blog/index.html">Blog</a>
