--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>one of the websites of all time</title>
 </head>
 <body>
-		<iframe src="/assets/html/navbar.html" frameBorder="0"></iframe>
+		<header><a href="index.html">Overview</a><a href="blog/index.html">Blog</a></header>
     <div class="ui" id="main">
         <div class="title">
             <img src="/assets/webicon.png" height="150px" width="150px">
