--- a/assets/html/socials.html
+++ b/assets/html/socials.html
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../../style.css" />
 </head>
+<body>
   <div id="socials">
     <a href="https://instagram.com/notmyjunie?igshid=YmMyMTA2M2Y=">
       <img src="/assets/instagram.png" alt="Instagram" class="socialicon" />
@@ -19,3 +20,4 @@
       <p class="imglink">kitty.social</p>
     </a>
   </div>
+ </body>
