--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!--div class="ui"-->
     <footer>
-<iframe src="/assets/html/socials.html" frameBorder="0"></iframe>
+<object type="text/html" data="/assets/html/socials.html"></object>
     </footer>
     <!--/div-->
 </body>
