--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css" >
-    <link rel="icon" type="image/png" href="/assets/webicon.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" type="image/png" href="/assets/webicon.png" />
     <title>one of the websites of all time</title>
-</head>
-<body>
-		<header><a href="index.html">Overview</a><a href="blog/">Blog</a></header>
+  </head>
+  <body>
+    <header><a href="index.html">Overview</a><a href="blog/">Blog</a></header>
     <div class="ui" id="main">
-        <div class="title">
-            <img src="/assets/webicon.png" height="150px" width="150px">
-            <h2>NotMyJunie</h2>
-        </div>
-        <ul>
-            <li><p>any pronouns</p></li>
-            <li><p>GMT+8 timezone</p></li>
-            <li><p>summoned upon on 4 September 2006</p></li>
-            <li><p>🩷💜💙</p></li>
-        </ul>
+      <div class="title">
+        <img src="/assets/webicon.png" height="150px" width="150px" />
+        <h2>NotMyJunie</h2>
+      </div>
+      <ul>
+        <li><p>any pronouns</p></li>
+        <li><p>GMT+8 timezone</p></li>
+        <li><p>summoned upon on 4 September 2006</p></li>
+        <li><p>🩷💜💙</p></li>
+      </ul>
     </div>
 
-		<div class="ui">
-			<div class="title"><h2>cool shit you can check out</h2></div>
-			<p id="cool">¯⁠\⁠_⁠(⁠ツ⁠)_⁠/⁠¯<p id="cool">for now at least</p></p>
-		</div>
+    <div class="ui">
+      <div class="title"><h2>!!!ANNYOUNCEMWENT!!!</h2></div>
+      <p id="cool">I'm gonnya rebuild this site with !!!!!JEKYLL!!!!!!</p>
+    </div>
 
     <!--div class="ui"-->
     <footer>
-<object type="text/html" data="/assets/html/socials.html"></object>
+      <object type="text/html" data="/assets/html/socials.html"></object>
     </footer>
     <!--/div-->
-</body>
+  </body>
 </html>
