--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </div>
 
     <div class="ui">
-      <div class="title"><h2>!!!ANNYOUNCEMWENT!!!</h2></div>
-      <p id="cool">I'm gonnya rebuild this site with !!!!!JEKYLL!!!!!!</p>
+      <div class="title"><h2>!ANNYOUNCEMWENT!</h2></div>
+      <p id="cool">I'm too unwilling to do it</p>
     </div>
 
     <!--div class="ui"-->
